fixed alignment

--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,7 @@ button:hover {
   border-color: #646cff;
   background-color: cyan;
   color: black;
+  border: 2px solid black;
 }
 button:focus,
 button:focus-visible {
@@ -104,6 +105,9 @@ button:focus-visible {
 
 
 .info-div{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   font-size: 5px;
 }
 
@@ -131,10 +135,26 @@ button:disabled:hover{
   display: none;
 }
 
-.verify-msg-div{
+/* .verify-msg-div{
   color: green;
   font-weight: bold;
   font-size: 10px;
+  border: 1px solid black;
+  background-color: #fff;
+  padding: 0px 1px;
+  padding-left: 4px;
+} */
+.verify-msg-div:empty{
+  border: none;
+  background-color: transparent;
+}
+
+.authorize-btn-div{
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  width: 30%;
+  /* background-color: orange; */
 }
 
 .authorize-btn{
@@ -169,6 +189,69 @@ button:disabled:hover{
   padding-right: 2px;
 }
 
+.inputEle-btn-div{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  /* background-color: red; */
+}
+
+
+
+
+.inputEle-addBtn-div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 2px;
+}
+
+.reset-btn-div{
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  width: 20%;
+}
+
+.for-error-div{
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  width: 100%;
+}
+
+
+.error-div{
+  color: red;
+  font-weight: bold;
+  background-color: #fff;
+  font-size: 10px;
+  border: 1px solid black;
+  padding: 0px 2px;
+  border-radius: 10px;
+  margin-bottom: 5px;
+}
+.error-div:empty{
+  border: none;
+  background-color: transparent;
+  margin: 0;
+}
+
+.lower-div{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 10px;
+}
+
+
+
+
+
+
+
 
 
 
@@ -199,16 +282,41 @@ button:disabled:hover{
   }
 
   .error-div{
-    font-size: 10px;
+    font-size: 8px;
   }
 
   .authorize-btn-div{
-    margin:0;
+    font-size: 10px;  
   }
 
   .authorize-btn{
-    border: none;
     border-radius: 1px solid black;
-    padding: 5px;
+    padding: 2px;
+  }
+
+  .verify-msg-div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 3px;
+    padding: 1px;
+    font-weight: bold;
+    background-color: black;
+    /* border: 1px solid rgb(8, 131, 8);
+    box-shadow: 0px 0px 5px 2px rgb(10, 221, 10); */
+    padding-right: 2px;
+    color: greenyellow;
+    border-radius: 5px;
+
+    
+  }
+
+  
+
+  .inputEle-addBtn-div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
   }
 }
